JOI-5 refactor z-index (prevent overlapping)

--- a/src/app/modules/contacts/contacts.component.scss
+++ b/src/app/modules/contacts/contacts.component.scss
@@ -13,7 +13,7 @@
   width: 100%;
   height: 100vh;
   background-color: rgba(0, 0, 0, 0.75);
-  z-index: 99;
+  z-index: 9999;
 }
 
 // ###################
